// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> should render bold text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qrdpx3-0 iAZzAb"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render regular text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qrdpx3-0 dcXoif"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content auto aligned when align prop is of value "inherit" 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qrdpx3-0 iMzQyB"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content auto aligned when align prop is of value "initial" 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qrdpx3-0 fczDsO"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content center aligned 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qrdpx3-0 kdjpwT"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render text with display content right aligned 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qrdpx3-0 fzpmNs"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;

exports[`<Text /> should render underlined text 1`] = `
<div>
  <div
    class="Textweb__Text-sc-1qrdpx3-0 jCvSGP"
    color="shade.980"
    data-testid="ds-text"
  >
    Displaying some text
  </div>
</div>
`;
